--- a/server/gokbg3/grails-app/i18n/messages_de.properties
+++ b/server/gokbg3/grails-app/i18n/messages_de.properties
@@ -21,7 +21,8 @@ default.paginate.prev=Vorherige
 default.paginate.next=Nächste
 default.boolean.true=Wahr
 default.boolean.false=Falsch
-default.date.format=dd.MM.yyyy HH:mm:ss z
+default.date.format=dd.MM.yyyy
+default.datetime.format=dd.MM.yyyy HH:mm:ss z
 default.number.format=0
 default.notunique = bereits vorhanden
 
