--- a/server/gokbg3/grails-app/i18n/messages_de.properties
+++ b/server/gokbg3/grails-app/i18n/messages_de.properties
@@ -123,7 +123,7 @@ packageBatch.format.scope=Should be one of: {0}
 packageBatch.format.national_range=For example must be one of: {0}
 packageBatch.format.regional_range=Should be one of: {0}
 packageBatch.format.anbieter_produkt_id=
-packageBatch.format.ddc=For example should be one or many of: {0}
+packageBatch.format.ddc=For example should be one or many of: {0} with comma as separators
 packageBatch.format.source_url=
 packageBatch.format.frequency=Must be one of: {0}
 packageBatch.format.title_id_namespace=Must be one of: {0}
