--- a/server/gokbg3/grails-app/i18n/messages_en.properties
+++ b/server/gokbg3/grails-app/i18n/messages_en.properties
@@ -449,6 +449,7 @@ public.index.component.curatorygroup = Curatory Groups
 public.index.component.titleinstancepackageplatform = Titles
 
 packageBatch.columnName.package_name=package_name
+packageBatch.columnName.package_uuid=package_uuid
 packageBatch.columnName.provider_uuid=provider_uuid
 packageBatch.columnName.nominal_platform_uuid=nominal_platform_uuid
 packageBatch.columnName.description=description
@@ -470,6 +471,7 @@ packageBatch.columnName.title_id_namespace=title_id_namespace
 packageBatch.columnName.automated_updates=automated_updates
 
 packageBatch.description.package_name=Name of Packge
+packageBatch.description.package_uuid=wekb uuid of Packge
 packageBatch.description.provider_uuid=wekb uuid of Provider
 packageBatch.description.nominal_platform_uuid=wekb uuid of Platform
 packageBatch.description.description=
@@ -491,6 +493,7 @@ packageBatch.description.title_id_namespace=Namespace for coloum title_id in KBA
 packageBatch.description.automated_updates=Should be the package updated automatically with the help of the kbart url?
 
 packageBatch.format.package_name=
+packageBatch.format.package_uuid=
 packageBatch.format.provider_uuid=
 packageBatch.format.nominal_platform_uuid=
 packageBatch.format.description=
