ERMS-3526: Package Batch Import nutzen um Importierte Paket zu bearbeiten

--- a/server/gokbg3/grails-app/i18n/messages_de.properties
+++ b/server/gokbg3/grails-app/i18n/messages_de.properties
@@ -89,7 +89,7 @@ packageBatch.columnName.title_id_namespace=title_id_namespace
 packageBatch.columnName.automated_updates=automated_updates
 
 packageBatch.description.package_name=Name of Packge
-packageBatch.description.package_uuid=wekb uuid of Packge
+packageBatch.description.package_uuid=wekb uuid of Packge for editing the package
 packageBatch.description.provider_uuid=wekb uuid of Provider
 packageBatch.description.nominal_platform_uuid=wekb uuid of Platform
 packageBatch.description.description=
