--- a/server/gokbg3/grails-app/i18n/messages.properties
+++ b/server/gokbg3/grails-app/i18n/messages.properties
@@ -495,7 +495,7 @@ packageBatch.columnName.automated_updates=automated_updates
 packageBatch.description.package_name=Name of Packge
 
 packageBatch.description.provider_uuid=wekb uuid of Provider
-packageBatch.description.package_uuid=wekb uuid of Packge
+packageBatch.description.package_uuid=wekb uuid of Packge for editing the package
 packageBatch.description.nominal_platform_uuid=wekb uuid of Platform
 packageBatch.description.description=
 packageBatch.description.url= Url for more Information
