--- a/server/gokbg3/grails-app/i18n/messages_en.properties
+++ b/server/gokbg3/grails-app/i18n/messages_en.properties
@@ -24,6 +24,13 @@ default.boolean.true=True
 default.boolean.false=False
 default.date.format=yyyy-MM-dd
 default.datetime.format=yyyy-MM-dd HH:mm:ss.S
+default.date.format.noZ = yyyy-MM-dd HH:mm:ss
+default.date.format.notime = yyyy-MM-dd
+default.date.format.notimeShort = yy-MM-dd
+default.date.format.notimenopoint = yyyyMMdd
+default.date.format.notime.normal = YYYY-MM-DD
+default.date.format.onlytime = HH:mm:ss
+default.date.format.onlyYear = yyyy
 default.number.format=0
 default.notunique = already exists
 default.yes = Yes
