--- a/server/gokbg3/grails-app/i18n/messages_en.properties
+++ b/server/gokbg3/grails-app/i18n/messages_en.properties
@@ -377,7 +377,7 @@ identifier.value.notNull=The Identifier must have a value!
 identifier.value.notUnique=An Identifier with this value already exists!
 identifier.value.noNamespace=No Namespace configured!
 identifier.create.error=Could not create Identifier!
-identifier.no.unique.by.component=This identifier is already exists for this component!
+identifier.no.unique.by.component=This identifier already exists for this component!
 identifier.create.success=Create Identifier was successfully
 identifier.create.fail=Create Identifier was failed
 
