Bugfix Frontend and FormatDate

--- a/server/gokbg3/grails-app/i18n/messages_en.properties
+++ b/server/gokbg3/grails-app/i18n/messages_en.properties
@@ -25,6 +25,7 @@ default.boolean.false=False
 default.date.format=yyyy-MM-dd
 default.datetime.format=yyyy-MM-dd HH:mm:ss.S
 default.date.format.noZ = yyyy-MM-dd HH:mm:ss
+default.date.format.noZWihoutSS = yyyy-MM-dd HH:mm
 default.date.format.notime = yyyy-MM-dd
 default.date.format.notimeShort = yy-MM-dd
 default.date.format.notimenopoint = yyyyMMdd
