ERMS-4432: Contact anlegen

--- a/server/gokbg3/grails-app/i18n/messages.properties
+++ b/server/gokbg3/grails-app/i18n/messages.properties
@@ -322,7 +322,7 @@ component.list.remove.denied.label = No Permission to remove items from this lis
 component.listItem.notFound.label = List item not found!
 component.classNotFound.label = Could not find domain class {0}. Please report this to an admin.
 component.create.denied.label = No permission to create an object of domain class {0}.
-component.addToList.denied.label = Could not add value to list
+component.addToList.denied.label = No permission to add value.
 
 curatoryGroup.name.label=name
 CuratoryGroup.label=Curatory Group
