Bugfix package batch

--- a/server/gokbg3/grails-app/i18n/messages_en.properties
+++ b/server/gokbg3/grails-app/i18n/messages_en.properties
@@ -515,8 +515,8 @@ packageBatch.format.file=Should be one of: {0}
 packageBatch.format.open_access=Should be one of: {0}
 packageBatch.format.payment_type=Should be one of: {0}
 packageBatch.format.scope=Should be one of: {0}
-packageBatch.format.national_range=For example must be one of: {0}
-packageBatch.format.regional_range=Should be one of: {0}
+packageBatch.format.national_range=For example must be one or many of: {0} with comma as separators
+packageBatch.format.regional_range=For example should be one or many of: {0} with comma as separators
 packageBatch.format.anbieter_produkt_id=
 packageBatch.format.ddc=For example should be one or many of: {0} with comma as separators
 packageBatch.format.source_url=
