ERMS-4550: Provider: E-Mail Contact erstellen

--- a/server/gokbg3/grails-app/i18n/messages.properties
+++ b/server/gokbg3/grails-app/i18n/messages.properties
@@ -542,3 +542,6 @@ packageBatch.format.archiving_agency=Should be one of: {0}
 packageBatch.format.open_access_of_archiving_agency=Should be one of: {0}
 packageBatch.format.post_cancellation_access_of_archiving_agency=Should be one of: {0}
 packageBatch.format.automated_updates=source_url, frequency must be set and must be one of: {0} 
+
+
+contact.email.validation.fail = The e-mail address is not a valid e-mail address. Please enter a valid e-mail address.
