ERMS-4549: Anbieter_Produkt_ID namespace in we:kb umbenennen

--- a/server/gokbg3/grails-app/i18n/messages_en.properties
+++ b/server/gokbg3/grails-app/i18n/messages_en.properties
@@ -467,7 +467,7 @@ packageBatch.columnName.payment_type=payment_type
 packageBatch.columnName.scope=scope
 packageBatch.columnName.national_range=national_range
 packageBatch.columnName.regional_range=regional_range
-packageBatch.columnName.anbieter_produkt_id=anbieter_produkt_id
+packageBatch.columnName.provider_product_id=provider_product_id
 packageBatch.columnName.ddc=ddc
 packageBatch.columnName.source_url=source_url
 packageBatch.columnName.frequency=frequency
@@ -492,7 +492,7 @@ packageBatch.description.payment_type=
 packageBatch.description.scope=
 packageBatch.description.national_range=
 packageBatch.description.regional_range=
-packageBatch.description.anbieter_produkt_id= ID for your Product
+packageBatch.description.provider_product_id= ID for your Product
 packageBatch.description.ddc=DDC Number
 packageBatch.description.source_url=Url for KBART-File
 packageBatch.description.frequency=How often should the package be updated with the help of the source url?
@@ -517,7 +517,7 @@ packageBatch.format.payment_type=Should be one of: {0}
 packageBatch.format.scope=Should be one of: {0}
 packageBatch.format.national_range=For example must be one or many of: {0} with comma as separators
 packageBatch.format.regional_range=For example should be one or many of: {0} with comma as separators
-packageBatch.format.anbieter_produkt_id=
+packageBatch.format.provider_product_id=
 packageBatch.format.ddc=For example should be one or many of: {0} with comma as separators
 packageBatch.format.source_url=
 packageBatch.format.frequency=Must be one of: {0}
