ERMS-4612: Manueller wekb Upload

--- a/server/gokbg3/grails-app/i18n/messages_en.properties
+++ b/server/gokbg3/grails-app/i18n/messages_en.properties
@@ -500,7 +500,7 @@ packageBatch.description.title_id_namespace=Namespace for coloum title_id in KBA
 packageBatch.description.archiving_agency=
 packageBatch.description.open_access_of_archiving_agency=
 packageBatch.description.post_cancellation_access_of_archiving_agency=
-packageBatch.description.automated_updates=Should be the package updated automatically with the help of the kbart url?
+packageBatch.description.automated_updates=Should be the package updated automatically with the help of the KBART url?
 
 packageBatch.format.package_name=
 packageBatch.format.package_uuid=
